修改样式 隐藏部分菜单 修改应用名称

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,14 +51,14 @@
 
     <style name="leftQuestionStyle">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">@dimen/content_height</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1.4</item>
         <item name="android:layout_gravity">left|center_vertical</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginTop">@dimen/activity_top_margin</item>
-        <item name="android:layout_marginBottom">@dimen/activity_bottom_margin</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:layout_marginBottom">2dp</item>
         <item name="android:textColor">@color/sub_text_black</item>
     </style>
 
@@ -66,7 +66,7 @@
 
     <style name="rightAnswerStyle">
         <item name="android:layout_width">0px</item>
-        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">2</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginRight">@dimen/activity_right_margin</item>
@@ -79,23 +79,29 @@
 
     <style name="leftQuestionRightAnswerLayoutStyle">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/content_height</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center_vertical</item>
         <item name="android:gravity">center_vertical</item>
         <item name="android:orientation">horizontal</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
     </style>
 
     //调整relativelayout“问题”部分对应的style文件
 
     <style name="relativeLeftQuestionStyle">
         <item name="android:layout_width">95dp</item>
-        <item name="android:layout_height">@dimen/content_height</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginLeft">48dp</item>
-        <item name="android:layout_marginTop">@dimen/activity_top_margin</item>
-        <item name="android:layout_marginBottom">@dimen/activity_bottom_margin</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
         <item name="android:textColor">@color/sub_text_black</item>
     </style>
     //调整relativelayout“答案”部分对应的style文件
@@ -106,6 +112,10 @@
         <item name="android:textSize">14sp</item>
         <item name="android:layout_marginRight">@dimen/activity_right_margin</item>
         <item name="android:textColor">@color/main_text_black</item>
+        <item name="android:paddingTop">0dp</item>
+        <item name="android:paddingBottom">0dp</item>
+        <item name="android:layout_marginTop">0dp</item>
+        <item name="android:layout_marginBottom">0dp</item>
         <item name="android:layout_centerVertical">true</item>
     </style>
 
