--- a/app/src/main/res/layout/activity_login1.xml
+++ b/app/src/main/res/layout/activity_login1.xml
@@ -39,9 +39,9 @@
                 android:layout_marginTop="6dp"
                 android:layout_marginBottom="36dp"
                 android:gravity="center"
-                android:text="深州市环境监控系统"
+                android:text="沧州中铁装备材料制造有限公司空气质量监测系统"
                 android:textColor="@color/white"
-                android:textSize="28sp" />
+                android:textSize="22sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
