--- a/app/src/main/res/layout/item_port_list.xml
+++ b/app/src/main/res/layout/item_port_list.xml
@@ -19,7 +19,7 @@
 
             <LinearLayout
                 android:layout_width="0px"
-                android:layout_height="120dp"
+                android:layout_height="wrap_content"
                 android:layout_marginRight="30dp"
                 android:layout_weight="3"
                 android:orientation="vertical"
