--- a/app/src/main/res/layout/layout_left_question_right_answer2.xml
+++ b/app/src/main/res/layout/layout_left_question_right_answer2.xml
@@ -2,6 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="0dp"
+    android:layout_marginBottom="0dp"
+    android:paddingBottom="0dp"
+    android:paddingTop="0dp"
     android:layout_weight="1">
     <RelativeLayout style="@style/leftQuestionRightAnswerLayoutStyle">
 
