--- a/app/src/main/res/layout/item_port_list.xml
+++ b/app/src/main/res/layout/item_port_list.xml
@@ -46,10 +46,16 @@
 
                 <include
                     android:id="@+id/layout_itemPortList_outputpointtype"
+                    android:visibility="gone"
                     layout="@layout/layout_left_question_right_answer2" />
 
                 <include
                     android:id="@+id/layout_itemPortList_ifsintering"
+                    android:visibility="gone"
+                    layout="@layout/layout_left_question_right_answer2" />
+
+                <include
+                    android:id="@+id/layout_itemPortList_position"
                     layout="@layout/layout_left_question_right_answer2" />
             </LinearLayout>
 
