--- a/app/src/main/res/layout/fragment_station_data_detail2.xml
+++ b/app/src/main/res/layout/fragment_station_data_detail2.xml
@@ -4,8 +4,8 @@
     android:orientation="vertical">
 
     <com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="220dp"></com.github.mikephil.charting.charts.BarChart>
-
+        android:layout_height="220dp" />
 
 </LinearLayout>
