--- a/app/src/main/res/layout/item_mark_layout.xml
+++ b/app/src/main/res/layout/item_mark_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="500dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="4dp"
     android:background="@color/backgroud_color" >
     <TextView
         android:id="@+id/tv_markerView_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:padding="5dp"
