--- a/app/src/main/res/layout/activity_station_data_detail.xml
+++ b/app/src/main/res/layout/activity_station_data_detail.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroud_color"
     android:orientation="vertical">
 
     <com.gz.xhb.util.TitleBar
