--- a/app/src/main/res/layout/activity_station_data_detail.xml
+++ b/app/src/main/res/layout/activity_station_data_detail.xml
@@ -16,12 +16,16 @@
         android:id="@+id/ll_stationDataDetail1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="4dp"
         android:orientation="vertical"></LinearLayout>
 
     <LinearLayout
         android:id="@+id/ll_stationDataDetail2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:layout_marginTop="4dp"
         android:orientation="vertical"></LinearLayout>
 
 
