--- a/app/src/main/res/layout/fragment_station_data_detail1.xml
+++ b/app/src/main/res/layout/fragment_station_data_detail1.xml
@@ -1,99 +1,206 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="8dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="40dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/datatitle"
-            android:layout_weight="3">
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_weight="7">
-        </TextView>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="40dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/datatitle"
-            android:layout_weight="3">
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_weight="7">
-        </TextView>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="40dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/datatitle"
-            android:layout_weight="3">
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_weight="7">
-        </TextView>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="40dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/datatitle"
-            android:layout_weight="3">
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_weight="7">
-        </TextView>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="40dp">
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/datatitle"
-            android:layout_weight="3">
-        </TextView>
-        <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:layout_weight="7">
-        </TextView>
-    </LinearLayout>
+
     <TextView
         android:layout_width="match_parent"
-        android:background="@drawable/bg_color_primary_shape"
-        android:layout_height="1dp">
+        android:layout_height="0.5dp"
+        android:background="@color/datatitle"
+        tools:ignore="Suspicious0dp" />
 
-    </TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="@drawable/bg_color_primary_shape">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="监测点"
+            android:textColor="@color/white"></TextView>
+
+
+        <FrameLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@color/white">
+
+
+            <TextView
+                android:id="@+id/tv_fragmentStationDataDetail_quality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical|right"
+                android:layout_marginRight="2dp"
+                android:padding="2dp"
+                android:textColor="@color/white"
+                android:textSize="12sp"
+                tools:background="@color/color_map1"
+                tools:text="优"></TextView>
+
+            <TextView
+                android:id="@+id/tv_fragmentStationDataDetail_name"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textColor="@color/black"
+                tools:text="空气质量微站1号"></TextView>
+        </FrameLayout>
+
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="@drawable/bg_color_primary_shape">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="监测时间"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_time"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="7"
+            android:background="@color/white"></TextView>
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="@drawable/bg_color_primary_shape">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="PM2.5 (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_pm25"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="PM10 (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_pm10"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="@drawable/bg_color_primary_shape">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="NO2 (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_no2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="CO (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_co"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="32dp"
+        android:background="@drawable/bg_color_primary_shape">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="SO2 (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_so2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:background="@color/datatitle"
+            android:gravity="center"
+            android:text="O3 (μg/m³)"
+            android:textColor="@color/white"></TextView>
+
+        <TextView
+            android:id="@+id/tv_fragmentStationDataDetail_o3"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:background="@color/white"></TextView>
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:background="@color/datatitle"
+        tools:ignore="Suspicious0dp" />
 
 
 </LinearLayout>
