--- a/app/src/main/res/layout/fragment_station_data_detail1.xml
+++ b/app/src/main/res/layout/fragment_station_data_detail1.xml
@@ -41,7 +41,7 @@
                 android:layout_gravity="center_vertical|right"
                 android:layout_marginRight="2dp"
                 android:padding="2dp"
-                android:textColor="@color/white"
+                android:textColor="@color/black"
                 android:textSize="12sp"
                 tools:background="@color/color_map1"
                 tools:text="优"></TextView>
@@ -77,7 +77,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="7"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
     </LinearLayout>
 
 
@@ -100,7 +102,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
 
         <TextView
             android:layout_width="0dp"
@@ -116,7 +120,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
     </LinearLayout>
 
     <LinearLayout
@@ -138,7 +144,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
 
         <TextView
             android:layout_width="0dp"
@@ -154,7 +162,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
 
     </LinearLayout>
 
@@ -177,7 +187,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
 
         <TextView
             android:layout_width="0dp"
@@ -193,7 +205,9 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:background="@color/white"></TextView>
+            android:background="@color/white"
+            android:gravity="center"
+            android:textColor="@color/black"></TextView>
     </LinearLayout>
 
     <TextView
