--- a/app/src/main/res/layout/fragment_station_data_detail1.xml
+++ b/app/src/main/res/layout/fragment_station_data_detail1.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -14,7 +15,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_color_primary_shape">
 
         <TextView
@@ -42,7 +44,7 @@
                 android:layout_marginRight="2dp"
                 android:padding="2dp"
                 android:textColor="@color/black"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 tools:background="@color/color_map1"
                 tools:text="优"></TextView>
 
@@ -60,7 +62,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_color_primary_shape">
 
         <TextView
@@ -85,7 +88,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_color_primary_shape">
 
         <TextView
@@ -127,7 +131,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_color_primary_shape">
 
         <TextView
@@ -170,7 +175,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="32dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@drawable/bg_color_primary_shape">
 
         <TextView
