--- a/app/src/main/res/layout/fragment_station_data_detail2.xml
+++ b/app/src/main/res/layout/fragment_station_data_detail2.xml
@@ -2,11 +2,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="8dp"
+    android:gravity="center"
     android:orientation="vertical">
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart1"
         android:layout_width="match_parent"
-        android:layout_height="220dp" />
+        android:layout_height="match_parent" />
 
 </LinearLayout>
