--- a/app/src/main/res/layout/activity_alarm_data_list.xml
+++ b/app/src/main/res/layout/activity_alarm_data_list.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
 
@@ -24,9 +25,88 @@
             android:layout_height="wrap_content" />
     </FrameLayout>
 
-    <include
-        layout="@layout/layout_condition"
-        ></include>
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/ll_onlineData_condition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbar_container"
+        android:orientation="horizontal"
+        android:padding="10dp">
+
+        <LinearLayout
+            android:id="@+id/ll_onlineData_time"
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <TextView
+                android:id="@+id/tv_onlineData_beginTime"
+                style="@style/timeSelectStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="2019-7-1" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="至" />
+
+            <TextView
+                android:id="@+id/tv_onlineData_endTime"
+                style="@style/timeSelectStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="2020-4-1" />
+
+
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/btn_onlineData_search"
+            style="@style/ButtonNormalStyle"
+            android:layout_width="68dp"
+            android:layout_height="30dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="8dp"
+            android:text="查询"
+            android:textSize="14sp" />
+
+
+        <!--        <RelativeLayout-->
+<!--            android:id="@+id/ll_onlineData_otherCondition"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
+
+<!--            <org.angmarch.views.NiceSpinner-->
+<!--                android:id="@+id/nice_spinner"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content" />-->
+
+<!--            <Button-->
+<!--                android:id="@+id/btn_onlineData_search"-->
+<!--                style="@style/ButtonNormalStyle"-->
+<!--                android:layout_width="68dp"-->
+<!--                android:layout_height="30dp"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_centerVertical="true"-->
+<!--                android:layout_marginRight="8dp"-->
+<!--                android:text="查询"-->
+<!--                android:textSize="14sp" />-->
+
+<!--        </RelativeLayout>-->
+
+
+    </LinearLayout>
+
 
     <cn.bingoogolapple.refreshlayout.BGARefreshLayout
         android:id="@+id/rl_baseList_refresh"
