--- a/app/src/main/res/layout/activity_alarm_data_list.xml
+++ b/app/src/main/res/layout/activity_alarm_data_list.xml
@@ -19,10 +19,10 @@
             android:minHeight="?attr/actionBarSize"
             style="@style/AppTheme.ActionBar"></com.gz.xhb_zhongtie.util.TitleBar>
 
-        <com.miguelcatalan.materialsearchview.MaterialSearchView
-            android:id="@+id/search_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+<!--        <com.miguelcatalan.materialsearchview.MaterialSearchView-->
+<!--            android:id="@+id/search_view"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content" />-->
     </FrameLayout>
 
     <LinearLayout
