--- a/app/src/main/res/layout/layout_left_question_right_answer.xml
+++ b/app/src/main/res/layout/layout_left_question_right_answer.xml
@@ -2,17 +2,20 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_weight="1">
     <RelativeLayout style="@style/leftQuestionRightAnswerLayoutStyle2">
 
         <TextView
             android:id="@+id/tv_left_question"
             style="@style/relativeLeftQuestionStyle2"
+            tools:text="企业名称"
              />
 
         <TextView
             android:layout_toRightOf="@+id/tv_left_question"
             android:id="@+id/tv_right_answer"
+            tools:text="沧州中铁设备制造材料有限公司沧州中铁设备制造材料有限公司"
             style="@style/relativeRightAnswerStyle2" />
     </RelativeLayout>
 </LinearLayout>
